# intellikit

./: .gitattributes  .gitignore  .readthedocs.yaml  AGENTS.md  CMakeLists.txt  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.devcontainer/: devcontainer.json  ensure-ssh-agent.sh
.github/scripts/: apptainer_wrap.sh  (+7 more)
accordo/: .mcp.json  CMakeLists.txt  README.md  __init__.py  kernel_args.py  pyproject.toml  result.py  snapshot.py  validator.py
accordo/.claude-plugin/: plugin.json
accordo/_internal/: codegen.py
accordo/_internal/ipc/: communication.py
accordo/accordo/: __init__.py  cli.py  exceptions.py  kernel_args.py  snapshot.py  validator.py
accordo/accordo/_internal/: hip_interop.py
accordo/accordo/_internal/ipc/: communication.py
accordo/accordo/mcp/: __init__.py  server.py
accordo/examples/: README.md
accordo/examples/01_reduction/: README.md  validate.py
accordo/examples/02_template_kernel/: README.md  validate.py
accordo/examples/03_pytorch_tensor_add/: README.md  tensor_add.py  validate.py
accordo/examples/04_pytorch_matmul/: README.md  tensor_matmul.py  validate.py
accordo/mcp/: server.py
accordo/skill/: SKILL.md
accordo/src/: CMakeLists.txt  accordo.hip  accordo.hpp
accordo/tests/: test_mcp_server.py  test_reduction_validation.py
apptainer/: IntelliKit-vllm.def  build.sh  intellikit.def  requirements-vllm.txt  run.sh  run_tests_and_examples.sh  slurm_build_mi300_1x.sbatch
docker/: Dockerfile
docs/: astro.config.mjs  compatibility-matrix.md  conf.py  dependencies.md  index.rst  release-notes.md  what-is-intellikit.md
examples/: README.md  simple_hip.py
install/: README.md
kerncap/: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
kerncap/.claude-plugin/: plugin.json
kerncap/examples/: README.md
kerncap/examples/01_extract_and_replay/: README.md  extract_and_replay.py  mini_pipeline.hip
kerncap/examples/02_pytorch_tensor_add/: README.md  profile_with_kerncap.py
kerncap/examples/03_pytorch_matmul/: README.md  profile_with_kerncap.py
kerncap/kerncap/: __init__.py  _subprocess.py  capturer.py  cli.py  extract.py  hsaco_extractor.py  profiler.py  reproducer.py  source_finder.py  triton_capture.py  triton_capture_hsa.py  validator.py
kerncap/kerncap/mcp/: server.py
kerncap/kerncap/templates/: triton_reproducer.py.j2  triton_reproducer_hsa.py.j2
kerncap/skill/: SKILL.md
kerncap/skills/test-kerncap/: SKILL.md
kerncap/slurm/: run_pytorch_examples_in_allocation.sh  run_pytorch_examples_payload.sh  test_pytorch_examples_mi300_1x.sbatch
kerncap/src/: CMakeLists.txt  FindHSA.cmake  kernarg_metadata.cpp  kernarg_metadata.hpp  kerncap.hip  kerncap.hpp  kerncap_log.hpp  replay.cpp
kerncap/tests/: README.md
kerncap/tests/integration/: conftest.py  test_batched_scale.py  test_ck_gemm.py  test_constant_memory_kernel.py  test_flash_attn.py  test_mini_pipeline.py  test_pytorch_tensor_add_example.py  test_triton_hsa_capture.py  test_vector_add.py
kerncap/tests/unit/: test_api.py  test_capturer.py  test_dwarf_source_finder.py  test_extract.py  test_kernarg_metadata.py  test_mcp_server.py  test_module_variables.py  test_reproducer.py  test_result_format.py  test_source_finder.py  test_triton_hsa_reproducer.py  test_validator.py
kerncap/tests/unit/fixtures/: sample_autotuned_kernel.py
kerncap/tests/unit/fixtures/hsaco/: triton_poi_fused_relu_0.hsaco
linex/: .mcp.json  README.md  pyproject.toml
mcp/: README.md  setup_cursor.py  test_mcp.py
metrix/: .mcp.json  README.md  example.py  pyproject.toml  pytest.ini  setup.py  setup_and_run.sh
nexus/: .mcp.json  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml
nexus/.claude-plugin/: plugin.json
nexus/csrc/include/nexus/: nexus.hpp
nexus/csrc/src/: CMakeLists.txt  nexus.cpp
nexus/examples/: README.md
nexus/examples/01_trace_kernel/: README.md  trace.py
nexus/examples/02_simple_hip/: README.md  simple_hip.py
nexus/examples/03_multiple_hip/: README.md  multiple_hip.py
nexus/examples/04_simple_triton/: README.md  simple_triton.py
nexus/examples/05_multiple_triton/: README.md  multiple_triton.py
nexus/examples/06_pytorch_tensor_add/: README.md  trace_pytorch.py
nexus/examples/07_pytorch_matmul/: README.md  trace_pytorch.py
nexus/nexus/: README.md  __init__.py  cli.py
nexus/nexus/mcp/: __init__.py  server.py
nexus/scripts/: run.sh
nexus/skill/: SKILL.md
nexus/tests/: test_inline_hip_trace.py  test_pytorch_tensor_add_example.py
proboscis/: CMakeLists.txt  MANIFEST.in  pyproject.toml
proboscis/csrc/include/proboscis/: interceptor.h  proboscis.h
proboscis/csrc/src/: CMakeLists.txt  interceptor.cpp  kernarg_repack.cpp  probe_buffer.cpp
proboscis/proboscis/: __init__.py  codegen.py  collector.py  msgpack_codec.py  patcher.py  planner.py
proboscis/proboscis/mcp/: server.py
proboscis/skill/: SKILL.md
proboscis/tests/: conftest.py  test_codegen.py  test_msgpack.py  test_patcher.py  test_planner.py
rocm_mcp/: .mcp.json  README.md  pyproject.toml
rocm_mcp/.claude-plugin/: plugin.json
rocm_mcp/examples/: amd_smi.py  hip_compiler.py  hip_docs.py  rocminfo.py
rocm_mcp/src/rocm_mcp/: __init__.py
rocm_mcp/src/rocm_mcp/compile/: __init__.py  hip_compiler.py  hip_compiler_mcp.py
rocm_mcp/src/rocm_mcp/doc/: __init__.py  hip_docs.py  hip_docs_mcp.py
rocm_mcp/src/rocm_mcp/sysinfo/: __init__.py  amd_smi.py  amd_smi_mcp.py  rocminfo.py  rocminfo_mcp.py
rocm_mcp/tests/compile/: test_hip_compiler.py  vectoradd_hip.cpp
rocm_mcp/tests/docs/: test_hip_docs.py
rocm_mcp/tests/sysinfo/: test_amd_smi.py  test_rocminfo.py
samplex/: README.md  pyproject.toml
samplex/examples/01_basic_sampling/: README.md  sample.py
samplex/skill/: SKILL.md
samplex/src/samplex/: __init__.py  api.py  logger.py
samplex/src/samplex/cli/: __init__.py  main.py
samplex/src/samplex/mcp/: server.py
samplex/src/samplex/profiler/: rocprof_wrapper.py
samplex/tests/unit/: test_api.py  test_rocprof_wrapper.py
scripts/: README.md  rebuild.sh
src/: CMakeLists.txt
uprof_mcp/: .mcp.json  README.md  pyproject.toml
(+585 files in other folders)
