# SPDX-License-Identifier: MIT
# Copyright (c) 2025 Advanced Micro Devices, Inc. All rights reserved.

[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "intellikit"
dynamic = ["version"]
description = "IntelliKit: LLM-ready GPU profiling and analysis toolkit for AMD ROCm"
authors = [
    { name = "Muhammad Awad", email = "muhaawad@amd.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

# By default, install nothing (meta-package)
dependencies = []

[project.urls]
Homepage = "https://github.com/AMDResearch/nexus"
Repository = "https://github.com/AMDResearch/nexus"
Documentation = "https://github.com/AMDResearch/nexus/blob/main/README.md"

[project.optional-dependencies]
# Each extra installs the corresponding subpackage from GitHub
# Subpackages handle their own builds (cmake for nexus, pure Python for others)
accordo = ["accordo @ git+https://github.com/AMDResearch/nexus.git@muhaawad/fix-accordo#subdirectory=accordo"]
metrix = ["metrix @ git+https://github.com/AMDResearch/nexus.git@muhaawad/fix-accordo#subdirectory=metrix"]
nexus = ["nexus @ git+https://github.com/AMDResearch/nexus.git@muhaawad/fix-accordo#subdirectory=nexus"]

# Install all tools
all = [
    "accordo @ git+https://github.com/AMDResearch/nexus.git@muhaawad/fix-accordo#subdirectory=accordo",
    "metrix @ git+https://github.com/AMDResearch/nexus.git@muhaawad/fix-accordo#subdirectory=metrix",
    "nexus @ git+https://github.com/AMDResearch/nexus.git@muhaawad/fix-accordo#subdirectory=nexus",
]

dev = [
    "pytest",
    "ruff",
]

# ---- setuptools configuration ----
[tool.setuptools]
# Empty meta-package with no code
packages = []

# ---- setuptools-scm versioning ----
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
fallback_version = "0.1.0"

[tool.ruff]
line-length = 120
exclude = [
    "**/*.ipynb",
    "build/**",
    "test/**",
    "**/resources/**",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E701", "E731", "E741", "F841", "F401"]

[tool.ruff.format]
quote-style = "double"
