# SPDX-License-Identifier: MIT
# Copyright (c) 2025 Advanced Micro Devices, Inc. All rights reserved.

[build-system]
requires = ["scikit-build-core>=0.3.3", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "intellikit"
dynamic = ["version"]
description = "IntelliKit: LLM-ready GPU profiling and analysis toolkit for AMD ROCm"
authors = [
    { name = "Muhammad Awad", email = "muhaawad@amd.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

# By default, install nothing (meta-package)
dependencies = []

[project.urls]
Homepage = "https://github.com/AMDResearch/nexus"
Repository = "https://github.com/AMDResearch/nexus"
Documentation = "https://github.com/AMDResearch/nexus/blob/main/README.md"

[project.optional-dependencies]
# Install individual tools
nexus = []
accordo = [
    "numpy",
    "kerneldb @ git+https://github.com/AMDResearch/kerneldb.git@508f7fcf7fbd88c9eb6850e9fdac2e41d24c399a"
]
metrix = ["pandas>=1.5.0"]

# Install all tools
all = [
    "pandas>=1.5.0",
    "numpy",
    "kerneldb @ git+https://github.com/AMDResearch/kerneldb.git@508f7fcf7fbd88c9eb6850e9fdac2e41d24c399a"
]

dev = [
    "pytest",
    "ruff",
]

[tool.scikit-build]
cmake.build-type = "Release"
# Install all three packages with their correct paths
wheel.packages = ["nexus/nexus", "accordo", "metrix/src/metrix"]
wheel.py-api = "cp38"

[tool.scikit-build.cmake.define]
CMAKE_PREFIX_PATH = {env="ROCM_PATH", default="/opt/rocm"}
LLVM_INSTALL_DIR = {env="LLVM_INSTALL_DIR", default="/opt/rocm/llvm"}
# Control which components to build (only nexus needs building)
BUILD_NEXUS = {env="BUILD_NEXUS", default="ON"}

# ---- setuptools-scm versioning ----
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
fallback_version = "0.1.0"

[tool.ruff]
line-length = 120
exclude = [
    "**/*.ipynb",
    "build/**",
    "test/**",
    "**/resources/**",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E701", "E731", "E741", "F841", "F401"]

[tool.ruff.format]
quote-style = "double"
