# SPDX-License-Identifier: MIT
# Copyright (c) 2025-2026 Advanced Micro Devices, Inc. All rights reserved.

[build-system]
requires = ["scikit-build-core>=0.3.3", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "intellikit"
dynamic = ["version"]
description = "IntelliKit: LLM-ready GPU profiling and analysis toolkit for AMD ROCm"
authors = [
    { name = "Muhammad Awad", email = "muhaawad@amd.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "kerneldb @ git+https://github.com/AMDResearch/kerneldb.git@c67ceefb548125c6ef9bc4042207f11fcb624c62"
]

[project.urls]
Homepage = "https://github.com/AMDResearch/intellikit"
Repository = "https://github.com/AMDResearch/intellikit"
Documentation = "https://github.com/AMDResearch/intellikit/blob/main/README.md"

[project.optional-dependencies]
# Install individual tools (base dependencies are always included)
nexus = []
accordo = []
metrix = ["pandas>=1.5.0"]
linex = []

# Install all tools
all = ["pandas>=1.5.0"]

dev = [
    "pytest",
    "ruff",
]

[tool.scikit-build]
cmake.build-type = "Release"
# Install all packages with their correct paths
wheel.packages = ["nexus/nexus", "accordo", "metrix/src/metrix", "linex/src/linex"]
wheel.py-api = "cp38"

[tool.scikit-build.cmake.define]
CMAKE_PREFIX_PATH = {env="ROCM_PATH", default="/opt/rocm"}
LLVM_INSTALL_DIR = {env="LLVM_INSTALL_DIR", default="/opt/rocm/llvm"}
# Control which components to build (only nexus needs building)
BUILD_NEXUS = {env="BUILD_NEXUS", default="ON"}

# ---- setuptools-scm versioning ----
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
fallback_version = "0.1.0"

[tool.ruff]
line-length = 100
exclude = [
    "**/*.ipynb",
    "build/**",
    "test/**",
    "**/resources/**",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",  # no type annotation for *args
    "ANN003",  # no type annotation for **kwargs
    "BLE001",  # catch blind exception
    "C901",    # McCabe complexity
    "COM812",  # interferes with formatter
    "D100",    # missing docstring in public module
    "D104",    # missing docstring in public package
    "INP001",  # implicit namespace package
    "LOG015",  # logging on root logger
    "PLR0912", # too many branches
    "PLR0913", # too many arguments in function
    "S101",    # allow assert
    "S603",    # subprocess without shell
    "T201",    # using print
    "TRY401",  # allow exception message
]
extend-select = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true # ignore missing documentation for *args and **kwargs

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100
quote-style = "double"
