# SPDX-License-Identifier: MIT
# Copyright (c) 2025 Advanced Micro Devices, Inc. All rights reserved.

[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "accordo"
dynamic = ["version"]
description = "Accordo: Automated side-by-side correctness validation for GPU kernels"
authors = [
    { name = "Muhammad Awad", email = "muhaawad@amd.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/AMDResearch/nexus"
Repository = "https://github.com/AMDResearch/nexus"
Documentation = "https://github.com/AMDResearch/nexus/tree/main/accordo"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

# ---- setuptools configuration ----
[tool.setuptools]
# The accordo source files are in the current directory
# Map the package 'accordo' to the current directory '.'
packages = ["accordo", "accordo.python", "accordo._internal"]

[tool.setuptools.package-dir]
accordo = "."

# ---- setuptools-scm versioning ----
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
fallback_version = "0.2.0"
root = ".."

[tool.ruff]
line-length = 120
exclude = [
    "**/*.ipynb",
    "build/**",
    "test/**"
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E701", "E731", "E741", "F841", "F401"]

[tool.ruff.format]
quote-style = "double"
