# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Advanced Micro Devices, Inc. All rights reserved.

[project]
name = "rocm-mcp"
version = "0.1.0"
description = "Collection of MCP servers for accessing ROCm capabilities from LLMs."
authors = [
    { name = "Yiannis Papadopoulos", email = "ypapadop@amd.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.21.0",
]

[project.scripts]
hip-compiler-mcp = "rocm_mcp.compile.hip_compiler_mcp:main"
hip-docs-mcp = "rocm_mcp.doc.hip_docs_mcp:main"
rocminfo-mcp = "rocm_mcp.sysinfo.rocminfo_mcp:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.4",
    {include-group = "examples"},
]
examples = [
    "langchain>=1.0.5",
    "langchain-mcp-adapters>=0.1.12",
    "langchain-openai>=1.0.2",
    "python-dotenv>=1.2.1",
]

# ---- Ruff configuration ----
[tool.ruff]
extend = "../pyproject.toml"

# ---- UV configuration ----
[tool.uv]
package = true
